2003-10-08  Hynek Hanke  <hanke@volny.cz>

	* config/speechd.conf.in: Removed tables configuration, removed sound module.

	* src/server/parse.c (parse_set): Table commands removed from SSIP.

	* src/server/set.c (set_spelling_uid): Parameter changed to ESpellMode.
	Code related to tables removed.

	* src/server/speechd.c (speechd_init): Tables removed.

	* src/server/speechd.h (TSpeechDTables): Definition removed, not necessary.
	Sound module removed.

	* src/server/dc_decl.h: No longer necessary callbacks removed (tables, etc.).

	* src/modules/module_utils_audio.c (module_audio_output_child): Read bitrate information
	from parent. Close and open audio.
	(module_parent_send_samples): Send also bitrate information in the first 10 bytes.

	* src/modules/module_utils_audio.c (module_audio_output_child): Don't open/close audio.

	* src/modules/flite.c (module_init): Don't fill module_sample_wave.
	(_flite_child): No module_sample_wave.
	(_flite_child): Open and close audio.

	* src/modules/festival.c (festival_fill_sample_wave): Removed.

	* src/modules/module_utils_audio.c (module_audio_output_child): Open audio before saying
	each data and close it after that.

2003-10-07  Hynek Hanke  <hanke@volny.cz>

	* intl/fdsetconv.c: New file.

2003-10-07  Milan Zamazal  <pdm@brailcom.org>

	* configure.in (AC_OUTPUT): config/{en,cs}/Makefile removed.

2003-10-03  Hynek Hanke  <hanke@volny.cz>

	* src/server/output.c (ADD_SET_STR): Added missing line terminator after "NULL".

	* src/modules/cstsnd.c (module_load):  Call REGISTER_DEBUG().	

	* src/modules/generic.c (module_load):  Call REGISTER_DEBUG().	

	* src/modules/flite.c (module_load):  Call REGISTER_DEBUG().	

	* src/modules/festival.c (module_load): Call REGISTER_DEBUG().

	* src/modules/module_utils.c (REGISTER_DEBUG): New macro.

	* src/server/sem_functions.c (semaphore_wait): Debugging message.

	* src/server/speaking.c (speak): Set speaking_uid to the uid of the client who
	sent this message.
